--- a/Card_Maker.html
+++ b/Card_Maker.html
@@ -27,6 +27,14 @@
                     <h2>Back</h2>
                 </div>
                 <div class="cards">
+                    <div class="card 01">
+                        <canvas id="front" width="60" height="60"></canvas>
+                        <input type="file" id="imagem1" accept="image/*">
+                    </div>
+                    <div class="card 02">
+                        <canvas id="back" width="60" height="60"></canvas>
+                        <input type="file" id="imagem2" accept="image/*">
+                    </div>
                 </div>
             </div>
             
