--- a/Card_Maker.html
+++ b/Card_Maker.html
@@ -28,27 +28,30 @@
                     </div>
                 </div>
                 <div class="canpreview" id="a4-preview">
-                    <div class="a4-sheet" id="a4">
-                        <div class="paircard">
-                            <div class="cancard"><img src="./Imagens/Back.png" style="transform: rotate(-90deg) scale(0.32);"></div>
-                            <div class="cancard"><img src="./Imagens/Front00.png" id="canimg1" style="transform: rotate(-90deg) scale(0.32);"></div>
+                    <canvas class="a4-sheet" id="myCanvas">
+                        <div class="pair01">
+                            <div class="paircard">
+                                <div class="cancard"><img src="./Imagens/Back.png" style="transform: rotate(-90deg) scale(0.32);"></div>
+                                <div class="cancard"><img src="./Imagens/Front00.png" id="canimg1" style="transform: rotate(-90deg) scale(0.32);"></div>
+                            </div>
+                            <div class="paircard">
+                                <div class="cancard"><img src="./Imagens/Back.png" style="transform: rotate(-90deg) scale(0.32);"></div>
+                                <div class="cancard"><img src="./Imagens/Front00.png" id="canimg2" style="transform: rotate(-90deg) scale(0.32);"></div>
+                            </div>
                         </div>
-                        <div class="paircard">
-                            <div class="cancard"><img src="./Imagens/Back.png" style="transform: rotate(-90deg) scale(0.32);"></div>
-                            <div class="cancard"><img src="./Imagens/Front00.png" id="canimg2" style="transform: rotate(-90deg) scale(0.32);"></div>
+                        <div class="pair02">
+                            <div class="paircard">
+                                <div class="cancard"><img src="./Imagens/Back.png" style="transform: rotate(-90deg) scale(0.32);"></div>
+                                <div class="cancard"><img src="./Imagens/Front00.png" id="canimg3" style="transform: rotate(-90deg) scale(0.32);"></div>
+                            </div>
+                            <div class="paircard">
+                                <div class="cancard"><img src="./Imagens/Back.png" style="transform: rotate(-90deg) scale(0.32);"></div>
+                                <div class="cancard"><img src="./Imagens/Front00.png" id="canimg4" style="transform: rotate(-90deg) scale(0.32);"></div>
+                            </div>
                         </div>
-                        <div class="paircard">
-                            <div class="cancard"><img src="./Imagens/Back.png" style="transform: rotate(-90deg) scale(0.32);"></div>
-                            <div class="cancard"><img src="./Imagens/Front00.png" id="canimg3" style="transform: rotate(-90deg) scale(0.32);"></div>
-                        </div>
-                        <div class="paircard">
-                            <div class="cancard"><img src="./Imagens/Back.png" style="transform: rotate(-90deg) scale(0.32);"></div>
-                            <div class="cancard"><img src="./Imagens/Front00.png" id="canimg4" style="transform: rotate(-90deg) scale(0.32);"></div>
-                        </div>
-                    </div>
+                    </canvas>
                 </div>
             </div>
-            <button id="downloadBtn">Baixar Imagem</button>
         </div>
         <div class="editor">
             <div class="cardseditor">
@@ -109,7 +112,7 @@
                     </div>
                 </div>
             </div>
-            
+            <button id="downloadBtn">Baixar Imagem</button>
         </div>
     </main>
 
